Fix #442: remove pixel gap under command bar. Maybe.

--- a/src/static/commandline.css
+++ b/src/static/commandline.css
@@ -5,7 +5,6 @@ body {
 
 input {
   width: 100%;
-  padding: 0;
   font-family: monospace;
   font-size: 9pt;
   line-height: 1.5;
